--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
         "type_traits": "cpp",
         "complex": "cpp",
         "thread": "cpp"
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
