--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 AlgorithmicMaterials/后缀数组[[:space:]]视频+ppt.rar filter=lfs diff=lfs merge=lfs -text
+AlgorithmicMaterials/算法竞赛进阶指南.pdf filter=lfs diff=lfs merge=lfs -text
