--- a/ACM/.vscode/launch.json
+++ b/ACM/.vscode/launch.json
@@ -16,7 +16,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
+            "args": ["-std=c++20"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
