--- a/ACM/.vscode/tasks.json
+++ b/ACM/.vscode/tasks.json
@@ -34,6 +34,9 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-Wall",
+                "-Wl,--stack=536870912",
+                "-std=c++20",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
