--- a/ACM/LeetCode/.vscode/settings.json
+++ b/ACM/LeetCode/.vscode/settings.json
@@ -29,7 +29,8 @@
         "random": "cpp",
         "tuple": "cpp",
         "ranges": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "new": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "python.pythonPath": "C:\\Users\\qpliu\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
