--- a/ACM/Acwing/.vscode/tasks.json
+++ b/ACM/Acwing/.vscode/tasks.json
@@ -2,31 +2,59 @@
     "options": {
         "cwd": "${workspaceRoot}"
     },
-    "tasks": [{
-        "type": "cppbuild",
-        "label": "C/C++: g++.exe 生成活动文件",
-        "command": "D:\\msys64\\mingw64\\bin\\g++.exe",
-        "args": [
-            "-fdiagnostics-color=always",
-            "-g",
-            "-Wall",
-            "-Wl,--stack=536870912",
-            "-std=c++20",
-            "${file}",
-            "-o",
-            "${fileDirname}\\${fileBasenameNoExtension}.exe"
-        ],
-        "options": {
-            "cwd": "${fileDirname}"
+    "tasks": [
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "D:\\msys64\\mingw64\\bin\\g++.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "-Wall",
+                "-Wl,--stack=536870912",
+                "-std=c++20",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
         },
-        "problemMatcher": [
-            "$gcc"
-        ],
-        "group": {
-            "kind": "build",
-            "isDefault": true
-        },
-        "detail": "调试器生成的任务。"
-    }],
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "D:\\msys64\\mingw64\\bin\\g++.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "-Wall",
+                "-Wl,--stack=536870912",
+                "-std=c++20",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
+        }
+    ],
     "version": "2.0.0"
 }
