--- a/ACM/Acwing/.vscode/settings.json
+++ b/ACM/Acwing/.vscode/settings.json
@@ -35,5 +35,6 @@
     },
     "git.ignoreLimitWarning": true,
     "python.pythonPath": "C:\\Users\\qpliu\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
-    "C_Cpp.errorSquiggles": "Enabled"
+    "C_Cpp.errorSquiggles": "Enabled",
+    "vue.codeActions.enabled": false
 }
