--- a/ACM/Acwing/.vscode/tasks.json
+++ b/ACM/Acwing/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe 生成活动文件",
-            "command": "D:\\msys64\\ucrt64\\bin\\g++.exe",
+            "command": "D:\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
