--- a/ACM/Acwing/.vscode/launch.json
+++ b/ACM/Acwing/.vscode/launch.json
@@ -24,17 +24,18 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [
-                "-std=c++17",
-                "-O3",
-                "-Wl,--stack=536870912"
-            ],
+            // "args": [
+            //     "-std=c++17",
+            //     "-O3",
+            //     "-Wl,--stack=536870912"
+            // ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "D:\\msys64\\mingw64\\bin\\gdb.exe",
+            // "miDebuggerPath": "C:\\Program Files\\CodeBlocks\\MinGW\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "为 gdb 启用整齐打印",
